--- a/Views/SaOutbound/Index.cshtml
+++ b/Views/SaOutbound/Index.cshtml
@@ -108,9 +108,12 @@
                       $('input#supplierName').val(getSupplierNames(ui.item.value));
                       $('#saOutbound').jqGrid('setCell',curRowId,'productSku',getProductSku(ui.item.value));
                       $('input#productSku').val(getProductSku(ui.item.value));
+                      $('#SaExciseDuty').jqGrid('setCell', curRowId, 'supplierId', getSupplierId(ui.item.value));
+                      $('input#supplierId').val(getSupplierId(ui.item.value));
                       } });   
                       }}},
-                    { label: 'Supplier', name: 'supplierName', width: 250, fixed: true, editable: true, edittype: "text", editoptions: { readonly: 'readonly' } },
+                   { label: 'Supplier', name: 'supplierName', width: 250, fixed: true, editable: true, edittype: "text", editoptions: { readonly: 'readonly' } },
+                   { label: 'SupplierId', name: 'supplierId', fixed: true, width: 250, editable: true, hidden: true },
                    { label: 'Product SKU',name: 'productSku',fixed:true,width:85,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
                    { label: 'ADJ Amount (+/-)',name: 'amount',fixed:true,width:85,align:"right",editable: true, edittype:"text",editrules: { required: true, number: true }},
                    { label: 'Notes',name: 'comments',fixed:true,width:450, editable: true, edittype:"text"}
@@ -380,6 +383,22 @@
             });
             $.ajaxSetup( { "async": true } );
             return ReasonsList; 
+        }
+        function getSupplierId(value) {
+            var Supplier = "";
+            $.ajaxSetup({ "async": false });
+            $.getJSON('SaExciseDuty/CreateList', function (data) {
+                if (data != null) {
+                    for (var i = 0; i < data.length; i++) {
+                        if (value === data[i].value) {
+                            Supplier = data[i].input;
+                        }
+                    }
+                }//if
+
+            });
+            $.ajaxSetup({ "async": true });
+            return Supplier;
         }
 </script>
 }
