--- a/Views/CustomerOrder/Index.cshtml
+++ b/Views/CustomerOrder/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="text-center">
-    <h2 class="display-4">Customer Order</h2>
+    <h2 class="display-4">Liquor Board Orders</h2>
 </div>
 <body>
    <div class="searchDate">
