--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,10 +30,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sales</a>
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sales Orders</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" asp-area="" asp-controller="FulfillSales" asp-action="Index">Fulfill Sales</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="CustomerOrder" asp-action="Index">Customer Order</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="FulfillSales" asp-action="Index">Fulfill MBLL Orders</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="CustomerOrder" asp-action="Index">Liquor Board Orders</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="CustomerSummary" asp-action="Index">Customer Summary</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Inventory" asp-action="Index">Inventory</a>
                             </div>
