--- a/Views/Supplier/Index.cshtml
+++ b/Views/Supplier/Index.cshtml
@@ -1,7 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
     ViewData["Title"] = "Suppliers";
 }
 
@@ -19,7 +16,6 @@
         <select class="form-control dropDownInput2" id="lob" name="lob"></select>
     </div>*@
 	<table id="supplier"></table>
-	<a asp-controller="Supplier" asp-action="SupplierReport" target="_blank" , asp-route-supplierid="@Model[1].SupplierId"> Supplier Id: @Model[1].SupplierId</a>
 	<div id="jqGridPager"></div>
 </body>
 
@@ -52,9 +48,9 @@
                             delOptions: { url: 'Supplier/Delete' }
                         }
                     },
-                   { label: 'Supplier Id', name: 'supplierId', editable: true, editoptions: { readonly: 'readonly' }, key: true},
-                   { label: 'Supplier Code', name: 'supplierCode',fixed:true, editable: true,width:120,editrules: { required: true }, edittype:"text",editoptions: {maxlength: 15}},
-                   { label: 'Supplier Name', name: 'name',fixed:true, editable: true,width:300, edittype:"text",editrules: { required: true },editoptions: {maxlength: 100} },
+					{ label: 'Supplier Id', name: 'supplierId', editable: true, editoptions: { readonly: 'readonly' }, key: true },
+					{ label: 'Supplier Code', name: 'supplierCode', fixed: true, editable: true, width: 120, editrules: { required: true }, edittype: "text", editoptions: { maxlength: 15 }, formatter: 'showlink', formatoptions: { baseLinkUrl: '/Supplier/SupplierReport', idName: 'supplierId', target: '_blank' } },
+					{ label: 'Supplier Name', name: 'name', fixed: true, editable: true, width: 300, edittype: "text", editrules: { required: true }, editoptions: { maxlength: 100 } },
                    { label: 'Address1', name: 'address1',fixed:true, editable: true,width:150, edittype:"text",editrules: { required: true },editoptions: {maxlength: 100} },
                    { label: 'Address2', name: 'address2',fixed:true,editable: true,width:150, edittype:"text",editoptions: {maxlength: 100} },
                    { label: 'City', name: 'city',fixed:true,editable: true,width:100,edittype:"text",editoptions: {maxlength: 100} },
